Added styles for hero 10

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -33,7 +33,9 @@
                         </div>
                         <footer>
                             <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
-                            <div><a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a><a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"/></span>Watch how it works</a>
+                            <div>
+                                <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
+                                <a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"/></span>Watch how it works</a>
                             </div>
                         </footer>                         
                     </div>
@@ -86,7 +88,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address"/>
                                     </div>
-                                    <button type="submit" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
                             </footer>
@@ -141,7 +144,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address"/>
                                     </div>
-                                    <button type="submit" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
                             </footer>
@@ -195,7 +199,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -240,7 +245,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -298,7 +304,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -331,7 +338,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -369,7 +377,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -395,8 +404,7 @@ Focus on retaining candidates and clients.</strong></p>
                         <div class="mb-4 mt-4 pb-3 pd-hero-9-text-outer pt-3">
                             <h1>SEO Optimized H1</h1>
                             <p class="pd-hero-9-headline">Nice big marketing headline</p>
-                            <p class="pd-hero-9-subHeadline">Sub headline to explain the large marketing headline</p>
-                            <a href="#" name="anchor" class="btn btn-outline-secondary"><img/>Find out more</a>
+                            <p class="pd-hero-9-subHeadline">Sub headline to explain the large marketing headline</p><a href="#" name="anchor" class="btn btn-outline-secondary"><img/>Find out more</a>
                         </div>                         
                     </div>
                     <div class="col-md-6 overflow-hidden pd-hero-9-col-image pe-0 pe-md-2 ps-0 ps-md-2">
@@ -422,21 +430,19 @@ Focus on retaining candidates and clients.</strong></p>
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-10</p>
             </div>
         </section>
-        <section class="d-flex flex-column justify-content-center pb-5 pt-5" style="position: relative; overflow: hidden; min-height: 80vh;">
-            <img style="width: 100%; height: 100%; object-fit: cover; object-position: center center; position: absolute; top: 0; left: 0; z-index: 0;" src="images/uploads/hero-people-at-work.jpg"/>
-            <div style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; background: linear-gradient(rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.6) 40%, rgba(0, 0, 0, 0.6) 60%, rgba(0, 0, 0, 0.8) 100%);"></div>
+        <section class="d-flex flex-column justify-content-center pb-5 pd-hero-10 pt-5">
+            <img src="images/uploads/hero-people-at-work.jpg" class="pd-hero-10-img"/>
+            <div class="pd-hero-10-overlay"></div>
             <div class="container" style="position: relative;">
                 <div class="row">
                     <div class="col-12">
-                        <div style="text-align: center;" class=" pe-lg-5 ps-lg-5">
-                            <h1 style="font-size: 0.7rem; color: white; text-transform: uppercase; letter-spacing: 0.1em; font-weight: 700; border-bottom: 2px solid white; display: inline-block; padding-bottom: 4px;">Web Developer Cornwall and Devon</h1>
-                            <p style="font-size: 4.4rem; font-weight: 700; color: white;">Profitable Solutions</p>
-                            <p style="color: white; font-weight: 300; font-size: 1rem; line-height: 1.8;">We help your business become more profitable through effective use of the web. Performant, cutting edge tech, safely tested and accessible.</p>
-                            <div>
-                                <a href="#" name="anchor" class="m-1" style="padding: 14px 30px; color: white; text-transform: uppercase; background: green; margin: 20px; display: inline-block; border-radius: 50em; text-decoration: none; letter-spacing: 0.15em; font-weight: 700; font-size: 0.8rem; box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);">Book Free Consultation</a>
-                                <a href="#" name="anchor" class="m-lg-1" style="color: white; font-weight: 700; display: inline-block; text-transform: uppercase; text-decoration: none; font-size: 0.8rem; letter-spacing: 0.15em;">Find out more</a>
+                        <div class="pe-lg-5 ps-lg-5 text-center">
+                            <h1>Freelance Web Developer UK</h1>
+                            <p class="pd-hero-10-headline"><strong>Profitable Solutions</strong></p>
+                            <p class="pd-hero-10-subheadline">We help your business become more profitable through effective use of the web. Performant, cutting edge tech, safely tested and accessible.</p>
+                            <div class="align-items-center d-flex flex-column flex-md-row justify-content-center"><a href="#" name="anchor" class="m-1 pd-hero-10-btn">Book Free Consultation</a><a href="#" name="anchor" class="m-lg-1 pd-hero-10-btn-light pt-2 pt-md-0">Find out more</a>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
