Added in final amends for pd-hero-10

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -434,14 +434,14 @@ Focus on retaining candidates and clients.</strong></p>
             <script>
                 function imageLoadedListener10(e) {
                     const heroImage10 = document.querySelector(".pd-hero-10-img");
-                    heroImage10.classList.add("pd-hero-img-10-loaded");
+                    heroImage10.classList.add("pd-hero-10-img-loaded");
                 }
             </script>
             <picture>
                 <source srcset="/images/uploads/hero-people-at-work.webp 1800w, 
                                 /images/uploads/hero-people-at-work-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
                 <img srcset="/images/uploads/hero-people-at-work.jpg 1800w,
-                            /images/uploads/hero-people-at-work-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-people-at-work.jpg" class="pd-hero-10-img" onload="imageLoadedListener10()"/>
+                            /images/uploads/hero-people-at-work-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-people-at-work.jpg" class="pd-hero-10-img" onload="imageLoadedListener10()" loading="lazy"/>
             </picture>
             <div class="pd-hero-10-overlay"></div>
             <div class="container" style="position: relative;">
@@ -451,7 +451,7 @@ Focus on retaining candidates and clients.</strong></p>
                             <h1>Freelance Web Developer UK</h1>
                             <p class="pd-hero-10-headline"><strong>Profitable Solutions</strong></p>
                             <p class="pd-hero-10-subheadline">We help your business become more profitable through effective use of the web. Performant, cutting edge tech, safely tested and accessible.</p>
-                            <div class="align-items-center d-flex flex-column flex-md-row justify-content-center"><a href="#" name="anchor" class="m-1 pd-hero-10-btn">Book Free Consultation</a><a href="#" name="anchor" class="m-lg-1 pd-hero-10-btn-light pt-2 pt-md-0">Find out more</a>
+                            <div class="align-items-center d-flex flex-column flex-md-row justify-content-center"><a href="#" name="anchor" class="m-1 pd-hero-10-btn">Book Free Consultation</a><a href="#" name="anchor" class="mb-lg-1 me-lg-1 ms-md-2 mt-lg-1  pd-hero-10-btn-light pt-2 pt-md-0">Find out more</a>
                             </div>
                         </div>                         
                     </div>
