Added new section for overview

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -33,9 +33,7 @@
                         </div>
                         <footer>
                             <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
-                            <div>
-                                <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
-                                <a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"/></span>Watch how it works</a>
+                            <div><a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a><a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"/></span>Watch how it works</a>
                             </div>
                         </footer>                         
                     </div>
@@ -88,8 +86,7 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address"/>
                                     </div>
-                                    <button type="submit" class="btn btn-info">
-                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
                             </footer>
@@ -144,8 +141,7 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address"/>
                                     </div>
-                                    <button type="submit" class="btn btn-info">
-                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
                             </footer>
@@ -199,8 +195,7 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ">
-                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info "><span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -245,8 +240,7 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ">
-                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info "><span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -304,8 +298,7 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ">
-                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -338,8 +331,7 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ">
-                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -377,8 +369,7 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ">
-                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -404,7 +395,8 @@ Focus on retaining candidates and clients.</strong></p>
                         <div class="mb-4 mt-4 pb-3 pd-hero-9-text-outer pt-3">
                             <h1>SEO Optimized H1</h1>
                             <p class="pd-hero-9-headline">Nice big marketing headline</p>
-                            <p class="pd-hero-9-subHeadline">Sub headline to explain the large marketing headline</p><a href="#" name="anchor" class="btn btn-outline-secondary"><img/>Find out more</a>
+                            <p class="pd-hero-9-subHeadline">Sub headline to explain the large marketing headline</p>
+                            <a href="#" name="anchor" class="btn btn-outline-secondary"><img/>Find out more</a>
                         </div>                         
                     </div>
                     <div class="col-md-6 overflow-hidden pd-hero-9-col-image pe-0 pe-md-2 ps-0 ps-md-2">
@@ -451,9 +443,39 @@ Focus on retaining candidates and clients.</strong></p>
                             <h1>Freelance Web Developer UK</h1>
                             <p class="pd-hero-10-headline"><strong>Profitable Solutions</strong></p>
                             <p class="pd-hero-10-subheadline">We help your business become more profitable through effective use of the web. Performant, cutting edge tech, safely tested and accessible.</p>
-                            <div class="align-items-center d-flex flex-column flex-md-row justify-content-center"><a href="#" name="anchor" class="m-1 pd-hero-10-btn">Book Free Consultation</a><a href="#" name="anchor" class="mb-lg-1 me-lg-1 ms-md-2 mt-lg-1  pd-hero-10-btn-light pt-2 pt-md-0">Find out more</a>
+                            <div class="align-items-center d-flex flex-column flex-md-row justify-content-center">
+                                <a href="#" name="anchor" class="m-1 pd-hero-10-btn">Book Free Consultation</a>
+                                <a href="#" name="anchor" class="mb-lg-1 me-lg-1 ms-md-2 mt-lg-1  pd-hero-10-btn-light pt-2 pt-md-0">Find out more</a>
                             </div>
                         </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-11</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;"></p>
+            </div>
+        </section>
+        <section class="pb-5 pd-hero-11 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d-flex flex-column justify-content-center">
+                        <div class="pb-4 pe-lg-4 pt-4 text-center text-md-start">
+                            <h1>Freelance web developer uk</h1>
+                            <p class="pd-hero-11-headline"><strong>Profitable web solutions</strong></p>
+                            <p class="pd-hero-11-subHeadline">We help your business become more profitable through effective use of the web. Performant, cutting edge tech, safely tested and accessible.</p>
+                            <div class="align-items-center align-items-md-start d-flex flex-column justify-content-start">
+                                <a href="#" name="anchor" class="pd-hero-11-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book free consultation</a>
+                                <a href="#" name="anchor" class="pd-hero-11-btn-light">Find out more</a>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-md-6">
+                        <div class="align-items-center d-flex flex-column justify-content-center pd-hero-11-img-outer">
+                            <img src="images/uploads/hero-scissors-office.svg" alt="image of web developer" width="400" height="400" class="img-fluid"/>
+                        </div>                                                  
                     </div>
                 </div>
             </div>
