--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -504,7 +504,6 @@
                                 <p><strong>Who is Scissors the perfect fit for?</strong></p>
                             </div>
                         </header>                         
-
                         <div class="pd-section-13-para">
                             <p>Vivamus eget massa eu orci dictum volutpat. Morbi tincidunt elit vel massa consectetur lacinia. Proin suscipit purus a mauris malesuada rutrum. Cras mauris turpis, porta sed sodales sit amet, aliquam a nisi. Aliquam diam turpis, hendrerit vel faucibus congue, lacinia egestas elit. Vivamus id lacinia odio. Suspendisse congue, tortor ac ultricies dapibus, odio metus vulputate dolor, vel porttitor metus dolor non neque.</p>
                         </div>                         
@@ -522,6 +521,50 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-14</p>
+            </div>
+        </section>
+        <section class="bg-light pb-5 pd-section-14 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center text-lg-start">
+                        <p class="pd-section-14-intro">About</p> 
+                    </div>
+                    <div class="col-lg-6 pb-4 pb-lg-0 text-center text-lg-start"> 
+                        <h2 class="pd-section-14-headline">We design and build bespoke web solutions</h2>
+                        <div class="pb-2 pt-2 text-center text-lg-start">
+                            <picture>
+                                <source srcset="/images/uploads/testimonial-man-3.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-man-3.jpg" alt="image of man working" width="80" height="80" class="pd-section-14-img-thumbnail"/>
+                            </picture>
+                            <picture>
+                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
+                                <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-14-img-thumbnail pd-section-14-img-thumbnail-right"/>
+                            </picture>
+                        </div>
+                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p>
+                        <a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-md-6 pb-3">
+                                <h3 class="pd-section-14-subHeadlines">Launching ideas</h3> 
+                                <p class="pd-section-14-block-para">Helping you get your ideas off the ground and deployed. From directories to private client areas, we can work with you to design and build your web projects.</p> 
+                            </div>
+                            <div class="col-md-6 pb-3">
+                                <h3 class="pd-section-14-subHeadlines">Peace of mind</h3> 
+                                <p class="pd-section-14-block-para">We use the best of the modern web to ensure that your solution is secure, fast, scalable, user-friendly and cost-effective.</p> 
+                            </div>
+                            <div class="col-md-6 pb-3">
+                                <h3 class="pd-section-14-subHeadlines">User-friendly</h3> 
+                                <p class="pd-section-14-block-para">We&apos;re easy to work with! Tim has a business background as well as coding. We understand the business challenges you face and how web solutions can benefit.</p> 
+                            </div>
+                            <div class="col-md-6 pb-3">
+                                <h3 class="pd-section-14-subHeadlines">Our tech stack</h3> 
+                                <p class="pd-section-14-block-para">We&apos;re passionate about progressive web apps, serverless and static site generators. We love Angular, Firebase, Jekyll and Netlify (to mention a few technologies we use).</p> 
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
