Added grid for portfolio grid

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -320,8 +320,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -512,8 +511,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -534,15 +532,14 @@
                         <div class="pb-2 pt-2 text-center text-lg-start">
                             <picture>
                                 <source srcset="/images/uploads/testimonial-man-3.webp" type="image/webp"/>
-                                <img src="/images/uploads/testimonial-man-3.jpg" alt="image of man working" width="80" height="80" class="pd-section-14-img-thumbnail"/>
+                                <img src="/images/uploads/testimonial-man-3.jpg" alt="image of man working" width="80" height="80" class="pd-section-14-img-thumbnail" loading="lazy"/>
                             </picture>
                             <picture>
                                 <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
-                                <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-14-img-thumbnail pd-section-14-img-thumbnail-right"/>
+                                <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-14-img-thumbnail pd-section-14-img-thumbnail-right" loading="lazy"/>
                             </picture>
                         </div>
-                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p>
-                        <a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
+                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p><a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
                     </div>
                     <div class="col-lg-6">
                         <div class="row">
