--- a/_factory_grid.html
+++ b/_factory_grid.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
         <title>Blank Template for Bootstrap</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
-        <section class="pb-5 pt-5">
-            <div class="container">
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-grid-1</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-grid-1 pt-5">
+            <div class="container-xxl">
                 <div class="row">
-                    <div class="col-12">
-                        <div style="display:grid;grid-template-columns:1fr 1fr 1fr;grid-template-rows:100px 100px;grid-gap:20px;">
-                            <div style="overflow: hidden; grid-area: 1 / 1 / 3 / 3; position: relative;">
-                                <img src="http://pinegrow.com/placeholders/img13.jpg" style="grid-area: 1 / 1 / 3 / 2; position: absolute; object-fit: cover; object-position: center center; width: 100%; height: 100%;" alt="image of beach" width="400" height="225">
+                    <div class="col-12 pe-0 pe-xl-2 ps-0 ps-xl-2">
+                        <div class="pd-grid-1-grid-outer">
+                            <div class="pd-grid-1-item pd-grid-1-item-1">
+                                <img src="images/uploads/blog-post-1.jpg" style="width: 100%; height: 100%; position: absolute; object-fit: cover; object-position: center center;"/>
                             </div>
-                            <div style="grid-area:1 / 3 / 3 / 4;">
-                                <h2>Great big headline</h2>
-                                <p>Visit this great beach and enjoy swimming in the sea!</p>
+                            <div class="pd-grid-1-item pd-grid-1-item-2">
+                                <img src="images/uploads/hero-coast-1000x1000.jpg" style="position: absolute; width: 100%; height: 100%; object-fit: cover; object-position: center center;"/>
                             </div>
-                            <div class="pg-empty-placeholder"></div>
-                        </div>                                                  
+                            <div class="pd-grid-1-item pd-grid-1-item-3">
+                                <img src="images/uploads/hero-sample-1.jpg" style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;"/>
+                            </div>
+                            <div class="pd-grid-1-item pd-grid-1-item-4">
+                                <img src="images/uploads/hero-testimonials.jpg" style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;"/>
+                            </div>
+                            <div class="pd-grid-1-item pd-grid-1-item-5">
+                                <img style="width: 100%; height: 100%; position: absolute; object-fit: cover; object-position: center center;" src="images/uploads/sections-sample-healthcare.jpg"/>
+                            </div>
+                            <div class="pd-grid-1-item pd-grid-1-item-6">
+                                <img style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;" src="images/uploads/cards-sample-1.jpg"/>
+                            </div>
+                            <div class="pd-grid-1-item pd-grid-1-item-7">
+                                <img style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;" src="images/uploads/cards-sample-3.jpg"/>
+                            </div>
+                            <div class="pd-grid-1-item pd-grid-1-item-8">
+                                <img style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;" src="images/uploads/cards-sample-2.jpg"/>
+                            </div>
+                        </div>                         
                     </div>
                 </div>
             </div>
