--- a/_factory_grid.html
+++ b/_factory_grid.html
@@ -22,10 +22,11 @@
             <div class="container-xxl">
                 <div class="row">
                     <div class="col-12 pe-0 pe-xl-2 ps-0 ps-xl-2">
-                        <div class="pd-grid-1-grid-outer">
-                            <div class="pd-grid-1-item pd-grid-1-item-1">
-                                <img src="images/uploads/blog-post-1.jpg" style="width: 100%; height: 100%; position: absolute; object-fit: cover; object-position: center center;"/>
-                            </div>
+                        <div class="pd-grid-1-grid-outer"><a href="#" class="pd-grid-1-item pd-grid-1-item-1"> <img src="images/uploads/blog-post-1.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
+                                    <p class="pd-grid-1-item-tag">Apps</p>
+                                    <h3 class="pd-grid-1-item-headline">Cornwall&apos;s beaches in your pocket</h3>
+                                    <p class="pd-grid-1-item-subPara">We&apos;re just about to launch an exciting app for iOS and Android</p>
+                                </div> </a>
                             <div class="pd-grid-1-item pd-grid-1-item-2">
                                 <img src="images/uploads/hero-coast-1000x1000.jpg" style="position: absolute; width: 100%; height: 100%; object-fit: cover; object-position: center center;"/>
                             </div>
